# rust-workspace-engine

./: .gitignore  .miller_cache.json  Cargo.toml  README.md  sandbox.Dockerfile
Notebook/: N1.1.brief.md  N1.md  N2_test_prompt_result.md  N3_ColdStorageCode.md
miller_core/: Cargo.toml
miller_core/.sessions/: latest.json
miller_core/src/: compiler.rs  config.rs  main.rs  network.rs  orchestrator.rs  security.rs  session.rs
miller_memory/: Cargo.toml
miller_memory/src/: client.rs  config.rs  lib.rs  logger.rs  models.rs
miller_parser/: Cargo.toml
miller_parser/src/: ast_graph.rs  lib.rs  scanner.rs
qdrant_storage/: raft_state.json
qdrant_storage/collections/miller_codebase/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/miller_codebase/0/segments/3b450eb8-9576-4d89-b695-d1e3910822e2/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/miller_codebase/0/segments/58c2a85a-820e-4557-b7ef-c3fbc104ee4a/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/miller_codebase/0/segments/84241c2e-0f3a-44b6-b4aa-1503a0d113a7/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/miller_codebase/0/segments/a2b90b0e-c967-4dd3-816a-b2be0decda9f/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/miller_codebase/0/segments/d2216016-ae86-4f06-80ce-ece7d9740a26/: mutable_id_tracker.mappings  mutable_id_tracker.versions
(+2 files in other folders)
