[package]
name = "miller_memory"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Qdrant se baat karne ke liye official reqwest-based client ya normal HTTP use karenge
reqwest = { version = "0.11", features = ["json"] }
